pass overview, timelines and remediation info in jira payload